Replace deprecated Integer/Boolean/Float constructors with static valueOf() methods